--- a/app/src/main/res/layout/activity_regional_stats.xml
+++ b/app/src/main/res/layout/activity_regional_stats.xml
@@ -212,14 +212,161 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
+
+            <!--       ADDING THE LATEST 8 TEXT VIEWS ABOVE THE RECYCLER VIEW-->
+
+            <!--       beginning of  text view 1-->
+
+            <TextView
+                android:id="@+id/casesTodayTV"
+                style="@style/Covid19TextView"
+                android:text="@string/new_cases_today"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="38dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/countryDeathCV"
+                />
+            <!--       beginning of  text view 2    -->
+
+            <TextView
+                android:id="@+id/casesTodayValueTV"
+                style="@style/Covid19TextView"
+                android:text="@string/new_cases_today_value"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="38dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/countryDeathCV"
+                />
+            <!--       beginning of  text view 3-->
+            <TextView
+                android:id="@+id/deathsTodayTV"
+                style="@style/Covid19TextView"
+                android:text="@string/new_deaths_today"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="26dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/casesTodayTV"
+                />
+            <!--       beginning of  text view 4    -->
+
+            <TextView
+                android:id="@+id/deathsTodayValueTV"
+                style="@style/Covid19TextView"
+                android:text="@string/new_deaths_today_value"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="26dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/casesTodayValueTV"
+                />
+            <!--       beginning of  text view 5-->
+            <TextView
+                android:id="@+id/casesPerMillionTV"
+                style="@style/Covid19TextView"
+                android:text="@string/cases_per_million"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="26dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/deathsTodayTV"
+                />
+            <!--       beginning of  text view 6   -->
+
+            <TextView
+                android:id="@+id/casesPerMillionValueTV"
+                style="@style/Covid19TextView"
+                android:text="@string/cases_per_million_value"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="26dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/deathsTodayValueTV"
+                />
+            <!--       beginning of  text view 7-->
+            <TextView
+                android:id="@+id/deathsPerMillionTV"
+                style="@style/Covid19TextView"
+                android:text="@string/deaths_per_million"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="26dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/casesPerMillionTV"
+                />
+            <!--       beginning of  text view 8   -->
+
+            <TextView
+                android:id="@+id/deathsPerMillionValueTV"
+                style="@style/Covid19TextView"
+                android:text="@string/deaths_per_million_value"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="26dp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/casesPerMillionValueTV"
+                />
+
+            <!--       ADDING THE LATEST 2 TEXT VIEWS ABOVE THE RECYCLER VIEW-->
+
+
+            <!--       beginning of  text view 1-->
+            <TextView
+                android:id="@+id/statesTV"
+                style="@style/Covid19TextView"
+                android:text="@string/state"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="45dp"
+                android:textColor="#818181"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/deathsPerMillionTV"
+                />
+            <!--       beginning of  text view 2   -->
+
+            <TextView
+                android:id="@+id/casesTV"
+                style="@style/Covid19TextView"
+                android:text="@string/cases_upper_case"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="45dp"
+                android:textColor="#818181"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/deathsPerMillionValueTV"
+                />
+
+            <!--       beginning of  Recycler View  -->
+
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/regionStatsRV"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/countryDeathCV"
+                app:layout_constraintTop_toBottomOf="@id/casesTV"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="42dp"
+                android:layout_marginTop="16dp"
                 tools:listitem="@layout/regional_stats"
                 tools:itemCount="3"
                 android:orientation="vertical"
