--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="colorWhiteTransparent">#33FFFFFF</color>
     <color name="colorPrimaryDarkTransparent">#4D219653</color>
     <color name="radioButtonText">#CBCFD4</color>
+    <color name="buttonLabel">#FFFFFF</color>
+
 </resources>
