--- a/app/src/main/res/layout/activity_regional_stats.xml
+++ b/app/src/main/res/layout/activity_regional_stats.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,32 +9,39 @@
 
     <ImageView
         android:id="@+id/backButtonIV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
+        android:layout_width="34dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_back_button"
-        />
+        android:src="@drawable/ic_back_button"/>
+
     <ImageView
         android:alpha="0.1"
         android:scaleType="fitXY"
-        android:id="@+id/countryIV"
+        android:id="@+id/countryFlagIV"
         android:layout_width="270dp"
         android:layout_height="163dp"
         android:layout_marginTop="50dp"
-        android:src="@drawable/flag_ng"
-        android:layout_gravity="end"
-        />
+        tools:src="@drawable/flag_ng"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/backButtonIV"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/countryNameTV"
@@ -42,7 +50,7 @@
                 android:textColor="#219653"
                 android:layout_marginStart="20dp"
                 android:textSize="32sp"
-                android:layout_marginTop="174dp"
+                android:layout_marginTop="124dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed"
@@ -53,8 +61,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/countryNameTV"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="30dp"
@@ -63,8 +71,11 @@
                 android:id="@+id/countryCasesCV">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="100dp"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp">
 
                     <ImageView
                         android:id="@+id/countryCasesIV"
@@ -91,6 +102,7 @@
                     <TextView
                         android:id="@+id/countryCasesNumberTV"
                         style="@style/Covid19TextView"
+                        android:layout_width="0dp"
                         android:text="200,000"
                         android:textColor="#000000"
                         android:textSize="36sp"
@@ -111,8 +123,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/countryCasesCV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:cardBackgroundColor="@color/colorPrimary"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="30dp"
@@ -121,8 +133,11 @@
                 android:id="@+id/countryRecoveredCV">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="100dp"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp">
 
                     <ImageView
                         android:id="@+id/countryRecoveryIV"
@@ -144,11 +159,12 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toTopOf="@id/countryRecoveryNumberTV"
                         app:layout_constraintVertical_chainStyle="packed"
-                        android:layout_marginStart="80dp"/>
+                        android:layout_marginStart="80dp" />
 
                     <TextView
                         android:id="@+id/countryRecoveryNumberTV"
                         style="@style/Covid19TextView"
+                        android:layout_width="0dp"
                         android:text="200,000"
                         android:textColor="@color/white"
                         android:textSize="36sp"
@@ -171,8 +187,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/countryRecoveredCV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:cardBackgroundColor="@color/deaths"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="30dp"
@@ -182,8 +198,11 @@
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="100dp"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp">
 
                     <ImageView
                         android:id="@+id/countryDeathIV"
@@ -210,6 +229,7 @@
                     <TextView
                         android:id="@+id/countryDeathNumberTV"
                         style="@style/Covid19TextView"
+                        android:layout_width="0dp"
                         android:text="200,000"
                         android:textColor="@color/white"
                         android:textSize="36sp"
@@ -369,7 +389,6 @@
 
             <!--       beginning of  Recycler View  -->
 
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/regionStatsRV"
                 android:layout_width="match_parent"
@@ -382,8 +401,9 @@
                 tools:itemCount="3"
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
