--- a/app/src/main/res/layout/regional_stats.xml
+++ b/app/src/main/res/layout/regional_stats.xml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="12dp"
+    android:layout_marginTop="12dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp">
 
+    <TextView
+        android:id="@+id/regionTV"
+        style="@style/Covid19TextView"
+        android:text="3,000"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="normal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginStart="21.5dp"
-        android:layout_marginEnd="18.5dp">
+    <TextView
+        android:id="@+id/regionStatValueTV"
+        style="@style/Covid19TextView"
+        android:text="Lagos"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
-        <TextView
-            android:id="@+id/regionStatValueTV"
-            style="@style/Covid19TextView"
-            android:text="3,000"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="normal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/regionStatTV"
-            style="@style/Covid19TextView"
-            android:text="Lagos"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-     </androidx.constraintlayout.widget.ConstraintLayout>
-
+ </androidx.constraintlayout.widget.ConstraintLayout>
