--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -29,17 +29,44 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
+<!--       creating a textview for the username -->
+
+        <TextView
+            android:id="@+id/usernameTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
+            android:textSize="16sp"
+            android:text="@string/set_username"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_settings"
+            />
+        <!--       creating a lineview below  the username -->
+
+        <View
+            android:id="@+id/v_LineUsername"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/grey"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/usernameTV"
+            />
+
+        <!--       beginning of old code -->
 
         <TextView
             android:id="@+id/rem_hand_loc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="33dp"
             android:textSize="16sp"
             android:text="@string/rem_hand_loc"
             app:layout_constraintEnd_toStartOf="@+id/rem_hand_locS"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_settings"
+            app:layout_constraintTop_toBottomOf="@+id/usernameTV"
             />
 
         <Switch
